# NewsDidattica_Sapienza

./: .env.example  .gitignore  README.md  first_run.py  formatter.py  main.py  pyproject.toml  requirements.txt  scraper.py  telegram_bot.py  testing.py
